--- a/index.html
+++ b/index.html
@@ -161,23 +161,32 @@
 					</section>
 					<section>
 						<h2>Architecture</h2>
-						<h3>Sharding</h3>
-<!------------>
+						<h3>Sharding, Replicas & Scaling</h3>
+						<img data-src="img/shard_0.png" height="500px"><br>
+					</section>
+					<section>
+						<h2>Architecture</h2>
+						<h3>Sharding, Replicas & Scaling</h3>
+						<img data-src="img/shard_1.png" height="500px"><br>
+					</section>
+					<section>
+						<h2>Architecture</h2>
+						<h3>RAFT</h3>
+						<img data-src="img/shard_2.png" height="500px"><br>
 					</section>
 					<section>
 						<h2>Architecture</h2>
 						<h3>Over servers</h3>
-<!------------>
+						<img data-src="img/over.png" height="500px"><br>
 					</section>
 					<section>
 						<h2>Architecture</h2>
-						<h3>Scaling</h3>
-<!------------>
-					</section>
-					<section>
-						<h2>Architecture</h2>
-						<h3>Availability</h3>
-<!------------>
+						<h3>Failover</h3>
+						3+ servers<br>
+						3+ replicas<br>
+						majority available : 👍<br>
+						majority not available : read only<br>
+						+ repair manually
 					</section>
 				</section>
 				<section>
@@ -189,7 +198,14 @@
 					<img data-src="img/read.png" height="160px">
 				</section>
 				<section>
+					<h2>Sources</h2>
+					RethinkDB doc : <a href="https://www.rethinkdb.com/docs/architecture/">www.rethinkdb.com</a><br>
+					RAFT protocl : <a href="https://raft.github.io/">raft.github.io</a><br>
+					Workbench : <a href="https://www.amon.cx/blog/rethinkdb-reviewed-by-a-mongo-fan">www.amon.cx/blog/rethinkdb-reviewed-by-a-mongo-fan</a>
+				</section>
+				<section>
 					<h1>Thank you</h1>
+					<img data-src="img/domraider.png" height="150px"><br>
 					<p><small>by Etienne Roudeix / <a href="http://twitter.com/__etienne">@__etienne</a></small></p>
 					<p>
 						<a href="http://github.roudeix.net/talks-rethinkDB" target="_blank">
