--- a/index.html
+++ b/index.html
@@ -40,9 +40,16 @@
 					<p>JSON documents</p>
 				</section>
 				<section>
+					<h2>Plan</h2>
+					<p>A new language</p>
+					<p>Tools</p>
+					<p>Architecture</p>
+					<p>Performance</p>
+				</section>
+				<section>
 					<section>
-						<h2>ReQL</h2>
-						<h3>RethinkDB API</h3>
+						<h2>A new language</h2>
+						<h3>ReQL</h3>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
@@ -119,6 +126,7 @@
 						</script>
 					</section>
 					<section>
+						<h1>ReQL</h1>
 						<img data-src="img/caveman.jpg">
 					</section>
 				</section>
@@ -187,6 +195,10 @@
 						majority available : 👍<br>
 						majority not available : read only<br>
 						+ repair manually
+					</section>
+					<section>
+						<h2>Architecture</h2>
+						<img data-src="img/inclusive.png" height="400px" style="border:0; background:none;"><br>
 					</section>
 				</section>
 				<section>
