add domraider logo

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 				</section>
 				<section>
 					<h1>Thank you</h1>
-					<img data-src="img/domraider.png" height="150px"><br>
+					<img data-src="img/domraider.png" height="200px" style="border:0; box-shadow: none"><br>
 					<p><small>by Etienne Roudeix / <a href="http://twitter.com/__etienne">@__etienne</a></small></p>
 					<p>
 						<a href="http://github.roudeix.net/talks-rethinkDB" target="_blank">
